# homework-cpp

./: CMakeLists.txt
14/bigNumberCompare/: CMakeLists.txt  main.cpp
14/correctIP/: correctnessIP.cpp
mod18/task2/: main.cpp
mod18/task3/: CMakeLists.txt  main.cpp
mod18/task4/: CMakeLists.txt
mod19/task1/: CMakeLists.txt  main.cpp
mod19/task2/: main.cpp
mod19/task3/: CMakeLists.txt
mod20/task2/: main.cpp
mod21/task1/: CMakeLists.txt  main.cpp
mod21/task2/: CMakeLists.txt
mod21/task3/: CMakeLists.txt  main.cpp
mod21/task4/: main.cpp
mod22/: .gitignore  task01.txt
mod22/task1/: CMakeLists.txt  main.cpp
mod22/task2/: CMakeLists.txt
mod22/task3/: main.cpp
mod22/task4/: main.cpp
mod22/task5/: CMakeLists.txt  main.cpp
mod23/task1/: main.cpp
mod23/task2/: CMakeLists.txt  main.cpp
mod23/task3/: main.cpp
mod23/task4/: CMakeLists.txt  main.cpp
mod24/task1/: main.cpp
mod24/task2/: main.cpp
mod24/task3/: main.cpp
mod24/task4/: main.cpp
mod25/task1/: CMakeLists.txt  main.cpp
mod25/task2/: CMakeLists.txt  main.cpp
mod25/task2/source/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
mod25/task3/: main.cpp
mod25/test/: .gitignore  main.cpp
mod26/task1/: CMakeLists.txt
mod26/task2/: CMakeLists.txt  contact.cpp  contact.h  main.cpp  mobile.cpp  mobile.h
mod26/task3/: CMakeLists.txt  main.cpp  monitor.cpp  monitor.h  window.cpp  window.h
mod27/task1/: CMakeLists.txt  main.cpp  tree.cpp  tree.h
mod27/task2/: CMakeLists.txt  figures.cpp  figures.h  input.cpp  input.h  main.cpp
mod27/task3/: main.cpp  (+3 more)
(+47 files in other folders)
